[project]
name = "esp-hub75"
version = "0.1.3"
description = "High-performance DMA-based driver for HUB75 RGB LED matrix panels on ESP32 platforms"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "clang-format>=19.0.0",
    "clang-tidy>=19.0.0",
    "platformio>=6.1.0",
    "pre-commit>=4.0.0",
]
